[gd_scene load_steps=5 format=3 uid="uid://5wihp5l2w8ia"]

[ext_resource type="Script" uid="uid://siuiy5tccwep" path="res://scripts/golden_apple.gd" id="1_y3rmh"]
[ext_resource type="Texture2D" uid="uid://d0bluh4mvb4nh" path="res://assets/apples/shadow.png" id="2_shdcj"]
[ext_resource type="Texture2D" uid="uid://dldjqh1xtilfa" path="res://assets/apples/golden_apple.png" id="3_y3rmh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0i6tn"]
size = Vector2(2, 2)

[node name="GoldenApple" type="Node2D"]
z_index = 400
script = ExtResource("1_y3rmh")

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_shdcj")

[node name="AppleSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_y3rmh")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_0i6tn")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
